<resources>
    <string name="app_name">Fitpass</string>
    <string name="scan">SCAN</string>
    <string name="one_pass_fits_all"><b>One pass fits all</b></string>
    <string name="todo">Fitpass logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="imageeye">eye</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\'t have an account? Create one here.</string>
    <string name="test_reset_title">Reset your password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Go back to Login</string>
    <string name="reset_content">In order to reset your password, we will need your email address. Once we confirm that you are in the system, you will receive further instructions via the registered email.</string>
    <string name="example">Example: my.email@gmail.com</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Go Back</string>
    <string name="enjoy_workout">Enjoy your workout</string>
    <string name="popular">Popular places</string>
    <string name="discounts_with_fitpass">Discounts with Fitpass</string>
    <string name="try_something_new">Try something new</string>
    <string name="working_hours">Working hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="facility_type">Facility type: </string>
    <string name="about_us">About us</string>
    <string name="facilities">Facilities</string>
    <string name="there_were_no_results_for_the_given_query">There were no results for the given query and filters.</string>
    <string name="sort_by">Sort by:</string>
    <string name="filters">Filters</string>
    <string name="select_city">Select city...</string>
    <string name="select_facility">Select facility...</string>
    <string name="city">City</string>
    <string name="reset_filter">Reset filter</string>
    <string name="apply_filter">Apply filter</string>
    <string name="review">Review</string>
    <string name="facility_type_filter">Facility type</string>
    <string name="PickImage">Pick Image</string>
    <string name="scan_was_successful">Scan was successful</string>
    <string name="scan_the_qr_code_for_authentication">Scan the QR code for authentication</string>
    <string name="status">Status:</string>
    <string name="active">Active</string>
    <string name="remaning_entries">Remaning entries:</string>
    <string name="entries_expiring">Entries expiring:</string>
    <string name="this_device_is_the_primary_device">This device is the primary device</string>
    <string name="scanning_the_qr_code_is_possible_only_via_the_primary_device">Scanning the QR code is possible only via the primary device.</string>
    <string name="update_profile">Update Profile</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="update">Update</string>
    <string name="buy_membership">Buy Membership</string>
    <string name="csv">CSV</string>
    <string name="choose_a_package">Choose a package</string>
    <string name="buy_membership_1">Buy membership</string>
    <string name="package_1">Package</string>
    <string name="total_price">Total price</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="update_profile1">&#160; Update profile</string>
    <string name="buy_membership1">&#160; Buy membership</string>
    <string name="logout">&#160; Logout</string>
    <string name="todo1">Todo</string>
    <string name="todo2">Todo</string>

</resources>