<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF1F6"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enjoy_workout"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                >

            </TextView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="40dp"
                android:elevation="20dp"
                android:padding="10dp"
                app:cardCornerRadius="15dp"
                tools:targetApi="lollipop">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/reklama"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/home_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/popular"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:scrollbars="none"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:id="@+id/mainScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/home_title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/discounts_with_fitpass"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:scrollbars="none"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:id="@+id/discountScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/home_title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/try_something_new"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scrollbars="none"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:id="@+id/facilityScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>